# PracticeExercises

./: README.md
ChattingTool/: CMakeLists.txt
ChattingTool/include/: SocketClient.h  SocketServer.h  header.h
ChattingTool/oldSrc/: chattingSocket.cpp  chattingSocket.h
ChattingTool/release/: ChattingClient  ChattingServer
ChattingTool/src/: CMakeLists.txt  SocketClient.cpp  SocketServer.cpp  client.cpp  server.cpp
ChattingTool/vsdebug/: client
VectorImplemetation/: CMakeLists.txt
VectorImplemetation/debug/: Execise_1_week_5
VectorImplemetation/include/: myVector.h
VectorImplemetation/src/: CMakeLists.txt  main.cpp  myVector.cpp
